# PythonTest

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: gen_ui.py  gen_ui.sh  run.sh
src/qt_app/: __init__.py  __main__.py  controller.py  main.py  simple_test.py  tests_collection.py  ui_window.py  window.py  window.ui
tests/: test_controller.py  test_import.py  test_ui.py
