[project]
name = "qt-app-skeleton"
version = "0.1.0"
description = "Skeleton Qt application in Python (PySide6)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["qt", "pyside6", "gui", "python"]

dependencies = [
    "PySide6>=6.5"
]

[project.scripts]
qt-app = "qt_app.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"